force-app/main/default/objects/Facility__c/Facility__c.object-meta.xml
<CustomObject>
    <description>Building or locations that host events. Looks up to Account: Organization and has a hierarchical relationship to identify rooms or sections within a building/location.</description>
    <label>Facility</label>
    <nameField>
        <label>Facility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>