force-app/main/default/objects/Facility__c/fields/Booking_Contact__c.field-meta.xml
<CustomField>
    <fullName>Booking_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Facilities (Booking Contact)</relationshipLabel>
    <relationshipName>Facilities_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>