force-app/main/default/objects/Facility__c/fields/Facility_Address__c.field-meta.xml
<CustomField>
    <fullName>Facility_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Address</label>
    <referenceTo>npsp__Address__c</referenceTo>
    <relationshipLabel>Facilities</relationshipLabel>
    <relationshipName>Facilities</relationshipName>
    <type>Lookup</type>
</CustomField>