force-app/main/default/objects/Facility__c/fields/Facility_Contact__c.field-meta.xml
<CustomField>
    <fullName>Facility_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Facilities</relationshipLabel>
    <relationshipName>Facilities</relationshipName>
    <type>Lookup</type>
</CustomField>