force-app/main/default/objects/Facility__c/fields/Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Type__c</fullName>
    <label>Facility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Library</fullName>
            </value>
            <value>
                <fullName>Theatre</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Auditorium</fullName>
            </value>
            <value>
                <fullName>Room</fullName>
            </value>
            <value>
                <fullName>Event Space</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>