force-app/main/default/objects/Facility__c/fields/Operating_Organization__c.field-meta.xml
<CustomField>
    <fullName>Operating_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account that owns or operates the facility. Could be a school, library, theatre, etc.</description>
    <label>Operating Organization</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Organization</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facilities</relationshipLabel>
    <relationshipName>Facilities</relationshipName>
    <type>Lookup</type>
</CustomField>