force-app/main/default/objects/Facility__c/fields/Parent_Facility__c.field-meta.xml
<CustomField>
    <fullName>Parent_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates rooms or subsections of location to the location</description>
    <label>Parent Facility</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>Facilities</relationshipLabel>
    <relationshipName>Facilities</relationshipName>
    <type>Lookup</type>
</CustomField>