force-app/main/default/objects/Facility__c/fields/Special_Equipment_Needed__c.field-meta.xml
<CustomField>
    <fullName>Special_Equipment_Needed__c</fullName>
    <label>Special Equipment Needed</label>
    <type>TextArea</type>
</CustomField>