force-app/main/default/objects/Facility__c/fields/Tech_Contact__c.field-meta.xml
<CustomField>
    <fullName>Tech_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tech Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Facilities (Tech Contact)</relationshipLabel>
    <relationshipName>Facilities_Tech</relationshipName>
    <type>Lookup</type>
</CustomField>