force-app/main/default/objects/Facility__c/fields/Venue_Information__c.field-meta.xml
<CustomField>
    <fullName>Venue_Information__c</fullName>
    <label>Venue Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>